Fix search on mobile

--- a/src/components/Dashboard/dashboard.css
+++ b/src/components/Dashboard/dashboard.css
@@ -48,7 +48,22 @@
 	transition: .3s;
 }
 
+.filter-buttons {
+	position: fixed;
+	background:#555;
+	transition: transform .3s;
+}
 
+.filter-buttons button {
+	background:#777;
+	border:0;
+	color:white;
+	cursor: pointer;
+	padding:10px;
+	font-size: 20px;
+}
+
+/* Mobile */
 @media (max-width: 599px) {
 	.dashboard {
 		grid-template-columns: repeat(auto-fit, minmax(92px, 1fr));
@@ -65,23 +80,77 @@
 	}
 
 	.filter {
-		bottom: 160px;
+		bottom: 180px;
 		right:20px;
+	}
+
+	.filter-buttons {
+		bottom: 120px;
+		display:flex;
+		flex-direction: column;
+		padding:10px;
+		border:3px solid #333;
+		border-left:0;
+		transform: translateX(-200px);
+	}
+
+	.filter-buttons button {
+		margin-bottom:5px;
+	}
+
+	.filter-buttons button:last-child {
+		margin-bottom: 0px;
+	}
+	
+	.filter-buttons button:hover {
+		opacity: .8;
+	}
+
+	.show-filter {
+		transform: translateX(0);
 	}
 }
 
+/* Desktop */
 @media (min-width:600px) {
+	
+	
 	.search-input {
 		top:100px;
 	}
-
+	
 	.search {
 		top: 80px;
 		right: 20px;
 	}
-
+	
 	.filter {
 		top: 160px;
 		right:20px;
+	}
+	
+	.filter-buttons {
+		top:155px;
+		right:0px;
+		padding: 10px;
+		border:3px solid #333;
+		border-right:0;
+		transform:translateX(550px);
+	}
+	
+	.filter-buttons button {
+		margin-right:2px;
+	}
+	
+	.filter-buttons button:last-child {
+		margin-right: 85px;
+	}
+
+	.filter-buttons button:hover {
+		opacity: .8;
+	}
+
+	.show-filter {
+		transform: translateX(0);
 	}
 }
